syntax = "proto3";

package heartbeatAPI;

option go_package = "internal/common/pb/heartbeat;heartbeatpb";

service HeartbeatAPI {
    rpc RequestHeartbeat(RequestHeartbeatRequest) returns (RequestHeartbeatResponse);
}

message RequestHeartbeatRequest {
    string nodeID = 1;
}

message ModelReplicaDetails {
    string replica_id = 1;
    string model_id = 2;
    string name = 3;
    string version = 4;
    string file_path = 5;
    string model_type = 6;
    int64 model_size = 7;
    string status = 8;
    int32 error_code = 9;
    string error_message = 10;
}

message RequestHeartbeatResponse{
    string nodeID = 1;
    repeated ModelReplicaDetails ModelReplicas = 2;
    bool success = 3;
}


